--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "json-server": "json-server --watch ./src/data/db.json --port 3000",
-    "server": "node ./src/server/server.js",
+    "json-server": "json-server --watch ./backend/data/db.json --port 3000",
+    "server": "node ./backend/server/server.js",
     "start": "concurrently \"npm run json-server\" \"npm run server\" \"npm run dev\" "
   },
   "dependencies": {
