maso funciona todo

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGODB_URI=mongodb://admin:abc123@localhost:27017/bbdd?authSource=admin
 JWT_SECRET=micontraseña585971
 RESEND_API_KEY=re_NSHkq1AD_L6bRgyDUaY3diodCqzk8JeWE
+GEMINI_API_KEY=AIzaSyBPAzGJFBU54DYOohy9n9bIDVifzG9QjDo
+ADMIN_EMAIL=carmenga24teis@gmail.com
