--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^17.2.3",
     "json-server": "^1.0.0-beta.3",
     "jsonwebtoken": "^9.0.3",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.19.3",
     "multer": "^2.0.2",
     "nvm": "^0.0.4",
