--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
     "@google/generative-ai": "^0.24.1",
+    "@stripe/stripe-js": "^8.7.0",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.3",
     "bootstrap": "^5.3.8",
@@ -28,7 +29,9 @@
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.19.3",
     "multer": "^2.0.2",
+    "pinia": "^3.0.4",
     "resend": "^6.8.0",
+    "stripe": "^20.3.0",
     "sweetalert2": "^11.23.0",
     "vue": "^3.5.18",
     "vue-router": "^4.6.3"
